# static_string

./: CMakeLists.txt  LICENSE  README.md  main.cpp  static_string.hpp  static_string.ipp
include/static_string/: static_string.hpp
test/: CMakeLists.txt  main.cpp
